--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "league/commonmark": "^1.5",
         "league/csv": "^9.0",
         "league/glide": "^1.1",
+        "matt-allan/laravel-code-style": "dev-main#d4d8ae6db4b3ff54b72b07d99f1afb2b830967a6",
         "michelf/php-smartypants": "^1.8",
         "pixelfear/composer-dist-plugin": "^0.1.4",
         "rebing/graphql-laravel": "^6.5",
